force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_State__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_State__c</fullName>
    <description>Auto-fills when the Zip code is entered.  This is the Applicant&apos;s state at the time of application. Tip: Use the Copy Address to Contacts link to sync with the Contact record.

Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout.</description>
    <inlineHelpText>Auto-fills when the Zip code is entered. This is the Applicant&apos;s state at the time of application.

Tip: Use the Copy Address to Contacts link to sync with the Contact record.</inlineHelpText>
    <label>Applicant State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>