force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_Street__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_Street__c</fullName>
    <description>The street address of the applicant at the time the application is submitted.

Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout.</description>
    <inlineHelpText>The street address of the applicant at the time the application is submitted.

Tip: Use the Copy Address to Contacts link to sync this address with the Contact record.</inlineHelpText>
    <label>Applicant Street</label>
    <type>TextArea</type>
</CustomField>