force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_Zip_Code__c</fullName>
    <description>Please note: The data stored in this field is linked to the national performance database.  Do not change this field or hide it from the layout. The applicant&apos;s zip code at the time of application. Enter first to auto-fill Applicant City, State and County. Tip: Use the Copy Address to Contacts link to sync with the Contact record.</description>
    <inlineHelpText>The applicant&apos;s zip code at the time of application. Enter first to auto-fill Applicant City, State and County.

Tip: Use the Copy Address to Contacts link to sync  with the Contact record.</inlineHelpText>
    <label>Applicant Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>