force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Application_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Application_Complete_Date__c</fullName>
    <description>The date that this application was first considered complete. Tip: If appropriate, set the Service File Status to Application Complete.</description>
    <inlineHelpText>The date that this application was first considered complete (also check if withdrawn or terminated).

Tip: If appropriate, set the Service File Status to Application Complete.</inlineHelpText>
    <label>Application Complete Date</label>
    <type>Date</type>
</CustomField>