force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Application_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Application_Fee_Paid__c</fullName>
    <description>The date the application fee was received.</description>
    <inlineHelpText>The date the application fee was received.</inlineHelpText>
    <label>Application Fee Paid</label>
    <type>Date</type>
</CustomField>