force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraisal_Company__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraisal_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copies from the Appraisal Company from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan.  To update, edit the related Appraisal record.</description>
    <inlineHelpText>Copies from the Appraisal Company from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan.  To update, edit the related Appraisal record.</inlineHelpText>
    <label>Appraisal Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (Appraisal Company)</relationshipLabel>
    <relationshipName>Services3</relationshipName>
    <type>Lookup</type>
</CustomField>