force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraisal_Date__c</fullName>
    <inlineHelpText>The date of the most recent Appraisal record with an Appraisal Type of Buyer&apos;s Purchase Loan.</inlineHelpText>
    <label>Appraisal Date</label>
    <type>Date</type>
</CustomField>