force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraisal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraisal_Ordered__c</fullName>
    <description>The date the program or lender ordered an appraisal.  This is an optional field intended to be used for transaction workflow tracking. Tip: Remove this field from your layout if you are not tracking appraisals orders.</description>
    <inlineHelpText>The date the program or lender ordered an appraisal.  This is an optional field intended to be used for transaction workflow tracking.

Tip: Remove this field from your layout if you are not tracking appraisals orders.</inlineHelpText>
    <label>Appraisal Ordered</label>
    <type>Date</type>
</CustomField>