force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraisal_Received__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraisal_Received__c</fullName>
    <description>The date the program received the appraisal from the lender or appraiser. Tip: Create a related Appraisal record to enter the details of the appraisal.</description>
    <inlineHelpText>The date the program received the appraisal from the lender or appraiser.

Tip: Create a related Appraisal record to enter the details of the appraisal.</inlineHelpText>
    <label>Appraisal Received</label>
    <type>Date</type>
</CustomField>