force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraised_Fee_Simple_Lot_Value__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraised_Fee_Simple_Lot_Value__c</fullName>
    <description>The Appraised Fee Simple Lot Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan (copies automatically).</description>
    <inlineHelpText>The Appraised Fee Simple Lot Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan.</inlineHelpText>
    <label>Appraised Fee Simple Lot Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>