force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraised_Leasehold_Value__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraised_Leasehold_Value__c</fullName>
    <description>The Appraised Leasehold Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan (copies automatically).</description>
    <inlineHelpText>The Appraised Leasehold Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan (copies automatically).</inlineHelpText>
    <label>Appraised Leasehold Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>