force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraised_Leasehold_Value_at_Resale__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraised_Leasehold_Value_at_Resale__c</fullName>
    <description>If linked to Buyer Service File, this will copy from the buyer&apos;s file when you click Sync Buyer/Seller Data. If there is no buyer Service File, enter manually and create a corresponding appraisal record to document the value at the time of transfer.</description>
    <inlineHelpText>If linked to Buyer Service File, this will copy from the buyer&apos;s file when you click Sync Buyer/Seller Data. If there is no buyer Service File, enter manually and create a corresponding appraisal record to document the value at the time of transfer.</inlineHelpText>
    <label>Appraised Leasehold Value at Resale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>