force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraised_Unrestricted_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraised_Unrestricted_Market_Value__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout. The Appraised Unrestricted Market Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan (copies automatically).</description>
    <inlineHelpText>The Appraised Unrestricted Market Value from the most recent Appraisal with an Appraisal Type of Buyer&apos;s Purchase Loan (copies automatically).</inlineHelpText>
    <label>Appraised Unrestricted Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>