force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Appraiser__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Appraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copies from the most recent related Appraisal record. To update, edit the related Appraisal record.</description>
    <inlineHelpText>Copies from the most recent related Appraisal record. To update, edit the related Appraisal record.</inlineHelpText>
    <label>Appraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Appraiser)</relationshipLabel>
    <relationshipName>Services5</relationshipName>
    <type>Lookup</type>
</CustomField>