force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Areas_Desired__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Areas_Desired__c</fullName>
    <description>&quot;Please list all areas where you are interested in buying.&quot; Included as part of 2012 CHIP evaluation.</description>
    <inlineHelpText>&quot;Please list all areas where you are interested in buying.&quot;</inlineHelpText>
    <label>Areas Desired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>