force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Assumable_Buyer_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Assumable_Buyer_Subsidy__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. This field uses a trigger to automatically sum the Amount of all Funding Sources that are designated Buyer Subsidy AND for which Assumable by Future Buyers is true.</description>
    <inlineHelpText>This calculated summary field shows the sum of the Amount of all Funding Sources that are designated Buyer Subsidy AND for which Assumable by Future Buyers is true.</inlineHelpText>
    <label>Assumable Buyer Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>