force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Attorney__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the attorney who reviewed legal documents. Tip: Create the Attorney&apos;s Account and Contact records before you lookup here.</description>
    <inlineHelpText>Lookup to the attorney who reviewed legal documents.

Tip: Create the Attorney&apos;s Account and Contact records before you lookup here.</inlineHelpText>
    <label>Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Attorney)</relationshipLabel>
    <relationshipName>Services7</relationshipName>
    <type>Lookup</type>
</CustomField>