force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Attorney_Review__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Attorney_Review__c</fullName>
    <description>Date Homebuyer met with attorney to review docs.</description>
    <inlineHelpText>Date Homebuyer met with attorney to review docs.</inlineHelpText>
    <label>Attorney Review</label>
    <type>Date</type>
</CustomField>