force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Bankruptcy__c</fullName>
    <description>&quot;Have you ever had a bankruptcy?&quot;</description>
    <inlineHelpText>&quot;Have you ever had a bankruptcy?&quot;</inlineHelpText>
    <label>Bankruptcy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>