force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Bedrooms_Desired__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Bedrooms_Desired__c</fullName>
    <description>As reported during the intake process, or on the application, in response to the question,&quot;What is your ideal number of bedrooms?&quot; Tip: This field can be used to better understand the market demand or match households to available units.</description>
    <inlineHelpText>As reported during the intake process, or on the application, in response to the question,&quot;What is your ideal number of bedrooms?&quot;

Tip: This field can be used to better understand the market demand or match households to available units.</inlineHelpText>
    <label>Number of Bedrooms Desired</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>