force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Best_Time_To_Call__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Best_Time_To_Call__c</fullName>
    <description>For example, &quot;1-4pm on weekdays or early morning on weekends.&quot;</description>
    <inlineHelpText>For example, &quot;1-4pm on weekdays or early morning on weekends.&quot;</inlineHelpText>
    <label>Best Time To Call</label>
    <length>30</length>
    <type>Text</type>
</CustomField>