force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Broker_Commission__c</fullName>
    <description>Total Broker Commission paid for by Seller. For optional program use only. This field is not linked to the HomeKeeper National Data Hub and not required when entering a resale. Previous help text instructed users to subtract this amount from Line 502 when entering Seller&apos;s Closing Costs, but as of version 1.10, Seller&apos;s Closing Costs should be taken directly from Line 502. If you were subtracting Broker Commission prior to v1.10, please update the values in Seller&apos;s Closing Costs to include Broker Commission. Also, if any BC amounts were listed as reductions OTHER than Line 502 (Seller&apos;s Closing Costs), they need to be moved into the new field &quot;Other Reductions to Amount Due Seller&quot; in order to make the new check &quot;Gross Amount Due to Seller Accounted For&quot; work. Contact HomeKeeper staff with any questions.</description>
    <inlineHelpText>Total Broker Commission paid for by Seller. For optional program use only. This field is not linked to the HomeKeeper National Data Hub and not required when entering a resale.</inlineHelpText>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>