force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Buyer__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Service File of the buyer. If the home is being sold back to the program, or transferred to a lender or buyer outside the program, leave blank.</description>
    <inlineHelpText>The Service File of the buyer. If the home is being sold back to the program, or transferred to a lender or buyer outside the program, leave blank.</inlineHelpText>
    <label>Buyer</label>
    <referenceTo>HOMEtracker__Service_File__c</referenceTo>
    <relationshipLabel>Services (Buyer)</relationshipLabel>
    <relationshipName>Services1</relationshipName>
    <type>Lookup</type>
</CustomField>