force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Buyer_Real_Estate_Company__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Buyer_Real_Estate_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tip: Create the Buyer&apos;s Real Estate Agent&apos;s Account record before you lookup here.</description>
    <inlineHelpText>Tip: Create the Buyer&apos;s Real Estate Agent&apos;s Account record before you lookup here.</inlineHelpText>
    <label>Buyer Real Estate Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (Buyer Real Estate Company)</relationshipLabel>
    <relationshipName>Services4</relationshipName>
    <type>Lookup</type>
</CustomField>