force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Buyers_Real_Estate_Agent__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Buyers_Real_Estate_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tip: Create the Buyer&apos;s Real Estate Agent&apos;s Account and Contact record  before you lookup here.</description>
    <inlineHelpText>Tip: Create the Buyer&apos;s Real Estate Agent&apos;s Account and Contact record  before you lookup here.</inlineHelpText>
    <label>Buyer&apos;s Real Estate Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Buyers Real Estate Agent)</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>