force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Buyers_Total_Cash_Investment__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Buyers_Total_Cash_Investment__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. This field has been replaced by a calculated field, Buyer&apos;s Total Investment at Closing, that shows the sum of all Funding Sources that are considered buyer&apos;s investment. Make sure that all files have Funding Source records that capture investment.</description>
    <inlineHelpText>This field has been replaced by a calculated field, Buyer&apos;s Total Investment at Closing, that shows the sum of all Funding Sources that are considered buyer&apos;s investment. Make sure that all files have Funding Source records that capture investment.</inlineHelpText>
    <label>Buyer&apos;s Total Cash Investment (OLD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>