force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Buyers_Total_Investment_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Buyers_Total_Investment_at_Closing__c</fullName>
    <description>The data stored in this field is linked to the HomeKeeper National Data Hub. This field was created in 1.10 to replace the field Buyer&apos;s Total Cash Investment (now labeled Buyer&apos;s Cash Investment (Manual)). That field required users to manually calculate and enter a sum. This new field uses a trigger to automatically sum all relevant funding sources. Sum of all Funding Source amounts for which Type = Buyer&apos;s Cash, Buyer&apos;s Cash (Paid Outside Closing), or Gift (Private). This is the basis for return on investment calculations.</description>
    <inlineHelpText>Sum of all Funding Source amounts for which Type = Buyer&apos;s Cash, Buyer&apos;s Cash (Paid Outside Closing), or Gift (Private). This is the basis for return on investment calculations.</inlineHelpText>
    <label>Buyer&apos;s Total Investment at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>