force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_4_Person_AMI__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_4_Person_AMI__c</fullName>
    <description>Please note: The data stored in this field is linked to the national performance database. Do not enter data in this field manually.</description>
    <inlineHelpText>This is the 4 person AMI for the AMI selected. It should be a locked field. (Do not enter values for this field. It is populated automatically when income is certified.)</inlineHelpText>
    <label>Certified 4-Person AMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>