force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_AMI__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_AMI__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout.  Copies from AMI for Household Size when the Certify Income button is pressed. Use this certified field for reporting.  The AMI for Household Size is the HUD AMI, weighted for family size.</description>
    <inlineHelpText>Copies from AMI for Household Size when the Certify Income button is pressed. Use this certified field for reporting.  The AMI for Household Size is the HUD AMI, weighted for family size.</inlineHelpText>
    <label>Certified AMI for Household Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>