force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_AMI_Range_Gross__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_AMI_Range_Gross__c</fullName>
    <formula>IF(  HOMEtracker__Certified_Percent_AMI__c &lt; 0.5, &apos;&lt;50%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 0.5 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 0.6, &apos;50-59%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 0.6 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 0.7, &apos;60-69%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 0.7 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 0.8, &apos;70-79%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 0.8 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 0.9, &apos;80-89%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 0.9 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 1.0, &apos;90-99%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 1.0 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 1.1, &apos;100-109%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 1.1 &amp;&amp; HOMEtracker__Certified_Percent_AMI__c &lt; 1.2, &apos;110-119%&apos;,
IF(HOMEtracker__Certified_Percent_AMI__c &gt;= 1.2, &apos;120%+&apos;,&apos;&apos;)))))))))</formula>
    <inlineHelpText>This is a formula field used to group Certified Percent of AMI (Gross) for reports and dashboards.</inlineHelpText>
    <label>Certified AMI % Range (Gross)</label>
    <type>Text</type>
</CustomField>