force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Annual_Income_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Annual_Income_Eligibility__c</fullName>
    <description>Copies from Annual Income (Eligibility) when the Certify Income button is pressed. Use this certified field for reporting.</description>
    <inlineHelpText>Copies from Annual Income (Eligibility) when the Certify Income button is pressed. Use this certified field for reporting.</inlineHelpText>
    <label>Certified Annual Income (Eligibility)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>