force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Closed_Date__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Copied from Close Date when the purchase is certified.</description>
    <inlineHelpText>Copied from Close Date when the purchase is certified.</inlineHelpText>
    <label>Certified Close Date</label>
    <type>Date</type>
</CustomField>