force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Gross_Annual_Income__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout. Copies from Annual Income (Gross) at the time of income certification. Use this certified field for reporting.</description>
    <inlineHelpText>Copies from Annual Income (Gross) at the time of income certification. Use this certified field for reporting.</inlineHelpText>
    <label>Certified Annual Income (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>