force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Household_Size__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Do not change this field or hide it from the layout. Copies from Household Size at the time of income certification. Use this certified field for reporting.</description>
    <inlineHelpText>Copies from Household Size at the time of income certification. Use this certified field for reporting.</inlineHelpText>
    <label>Certified Household Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>