force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Income_Calculation__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Income_Calculation__c</fullName>
    <description>Copies from Eligibility Income Calculation (hidden) at the time of income certification. Includes calculations from all related Income Sources where &quot;Do Not Include...&quot; is not checked.</description>
    <inlineHelpText>Copies from Eligibility Income Calculation (hidden) at the time of income certification. Includes calculations from all related Income Sources where &quot;Do Not Include...&quot; is not checked.</inlineHelpText>
    <label>Certified Eligibility Income Calculation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>