force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Percent_AMI__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Percent_AMI__c</fullName>
    <description>Please note: The data stored in this field is linked to the national performance database.  Do not change this field or hide it from the layout. Auto-calculates when the Certify Income button is pressed. Certified Annual Income (Gross) / Certified AMI for Household Size.</description>
    <formula>HOMEtracker__Certified_Gross_Annual_Income__c  / HOMEtracker__Certified_AMI__c</formula>
    <inlineHelpText>Auto-calculates when the Certify Income button is pressed. Certified Annual Income (Gross) / Certified AMI for Household Size.</inlineHelpText>
    <label>Certified Percent of AMI (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>