force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Percent_of_AMI_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Percent_of_AMI_Eligibility__c</fullName>
    <description>Copies the value of the Percent of AMI (Eligibility) field at when the Certify Income button is pressed.</description>
    <formula>HOMEtracker__Certified_Annual_Income_Eligibility__c / HOMEtracker__Certified_AMI__c</formula>
    <inlineHelpText>Copies the value of the Percent of AMI (Eligibility) field at when the Certify Income button is pressed.</inlineHelpText>
    <label>Certified Percent of AMI (Eligibility)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>