force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certified_Subsidy_Beyond_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certified_Subsidy_Beyond_Market_Value__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. The value of the Subsidy Beyond Market Value field at the time of purchase. Copies automatically when Certify Purchase button is clicked.</description>
    <inlineHelpText>The value of the Subsidy Beyond Market Value field at the time of purchase. Copies automatically when Certify Purchase button is clicked.</inlineHelpText>
    <label>Certified Subsidy Beyond Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>