force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Certify_Income__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Certify_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated field. Do not use.</description>
    <inlineHelpText>Deprecated field. Do not use.</inlineHelpText>
    <label>ZZ DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>