force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__CHIP_Program__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__CHIP_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this file is associated with the CHIP evaluation.</inlineHelpText>
    <label>CHIP Program?</label>
    <type>Checkbox</type>
</CustomField>