force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Chronic_Mental_Illness__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Chronic_Mental_Illness__c</fullName>
    <label>Chronic Mental Illness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>